[package]
name = "unicode-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "unicode", "wrap_help"] }
cli-table = "0.4.7"
itertools = "0.10.5"
